[project]
name = "awesome-pkg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "donwany", email = "user.aerogramme@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
awesome-pkg = "awesome_pkg:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
