[project]
name = "awesome-pkg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "donwany", email = "user.aerogramme@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "requests>=2.32.5",
    "rich>=14.3.3",
]

[project.scripts]
awesome-pkg = "awesome_pkg:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
